--- a/src/app/barcode-scanner-livestream/barcode-scanner-livestream-route.component.scss
+++ b/src/app/barcode-scanner-livestream/barcode-scanner-livestream-route.component.scss
@@ -1,4 +1,14 @@
-.barcode-scanner-container, .barcode-value {
-    display: flex;
+.barcode-scanner-container {
+    display: inline-block;
     justify-content: center;
+    margin-top: 10px;
+}
+
+.table-container{
+   
+        display: inline-block;
+        height: 300px;
+        margin-right: 30px;
+        margin-top: 10px;
+      
 }
